fix(payment): INT-6404 AmazonPayV2: Prevent button flickering

--- a/packages/core/src/scss/components/checkout/checkoutRemote/_checkoutRemote.scss
+++ b/packages/core/src/scss/components/checkout/checkoutRemote/_checkoutRemote.scss
@@ -11,6 +11,10 @@
     > div {
         margin-right: spacing("single");
     }
+
+    > .AmazonPayContainer {
+        width: 200px;
+    }
 }
 
 .checkoutRemote-button {
